[FEAT][FIX]: Added Testing + Reworked Parser (#42)
* [FEAT]: Implement ANTLR Parser + Lexer

* [FEAT]: Partial shell implementation with ANTLR

* [FIX]: Fixed minor IO bug in parser

* [CHORE]: Deleted test.py

* [REFACTOR]: Fix seq

* [FEAT]: New parser

* [FIX]: Small antlr grammar fix

* [FIX]: broken

* [FEAT]: Implemented Antlr Visitor Class

* [FIX]: Fixed logic of post-parse

* [FIX]: Logic fixed for Pipe and Semicolon

* [FIX]: Further bug and logic fixes

* [FIX]: Fixed edge cases and IO redirection

* [FIX]: Fixed stdin and exception throwing

* [FIX]: Working on Cut Logic

* [FIX]: Logic of subcommand fixed

* [FIX]: Minor fix

* [ISSUE]: Fixed Cat for Stdin cases - Incorrect test

* Update automated_test.yml

* [FIX]: Cut bugfixes

* [FIX]: Minor bugfix

* [FIX]: Parser completion

* [FIX]: Command substitution logic fix

* [REFACTOR]: Commented functions in commands

* [FIX]: Fixed Find argument name change

* Delete .github/workflows/pylint.yml

* [FIX]: Fixed Parser and Multiple Pipe

* [REFAC]: Large Parser Overhaul

* [REFAC]: Changed call

* [FIX]: Quick fix

* [REFAC]: Visitor.py and coverage testing

* [FEAT]: 59% Coverage testing

* [FEAT]: Testing files

* [REFAC]: Overhaul of parser and addition of new commands (#29)

* [FEAT]: Implement ANTLR Parser + Lexer

* [FEAT]: Partial shell implementation with ANTLR

* [FIX]: Fixed minor IO bug in parser

* [CHORE]: Deleted test.py

* [REFACTOR]: Fix seq

* [FEAT]: New parser

* [FIX]: Small antlr grammar fix

* [FIX]: broken

* [FEAT]: Implemented Antlr Visitor Class

* [FIX]: Fixed logic of post-parse

* [FIX]: Logic fixed for Pipe and Semicolon

* [FIX]: Further bug and logic fixes

* [FIX]: Fixed edge cases and IO redirection

* [FIX]: Fixed stdin and exception throwing

* [FIX]: Working on Cut Logic

* [FIX]: Logic of subcommand fixed

* [FIX]: Minor fix

* [ISSUE]: Fixed Cat for Stdin cases - In

--- a/.github/workflows/automated_test.yml
+++ b/.github/workflows/automated_test.yml
@@ -17,3 +17,7 @@ jobs:
         run: docker build -t comp0010-system-test .
       - name: Run system tests
         run: python system_test/tests.py -v
+      # - name: Build the Docker image for unit tests
+      #   run: docker build -t shell .
+      # - name: Run coverage tests
+      #   run:  docker run --rm shell /comp0010/tools/coverage
